--- a/css/main.css
+++ b/css/main.css
@@ -6,22 +6,41 @@ html {
   height: 300px;
   margin: 50px auto;
   width: 300px;
+  position: relative;
 
   background: transparent url("../images/clock-face.svg") no-repeat center center;
+    z-index: 1;
+
 }
 
 .center {
   width: 28px;
+  position: absolute;
+  left: calc(50% - 15px);
+  top: 140px;
+  z-index: 100;
 }
 
 .hand {
   width: 14px;
+  position: absolute;
+  left: calc(50% - 8px);
+  top: 150px;
 }
 
 .hand-hour {
-
+  z-index: 3;
+  animation: spin 6s infinite;
+  transform-origin: top;
 }
 
 .hand-minute {
+  z-index: 2;
+  animation: spin 3s infinite;
+  transform-origin: top;
+}
+@keyframes spin {
+  0% {transform: rotate(0deg);}
+  100% {transform: rotate(360deg);}
 
 }
