--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ html {
   width: 28px;
   position: absolute;
   left: calc(50% - 15px);
-  top: 140px;
+  top: 135px;
   z-index: 100;
 }
 
@@ -25,19 +25,19 @@ html {
   width: 14px;
   position: absolute;
   left: calc(50% - 8px);
-  top: 150px;
+  bottom: 150px;
 }
 
 .hand-hour {
-  z-index: 3;
-  animation: spin 6s infinite;
-  transform-origin: top;
+  z-index: 2;
+  animation: spin 6s infinite linear;
+  transform-origin: bottom;
 }
 
 .hand-minute {
-  z-index: 2;
-  animation: spin 3s infinite;
-  transform-origin: top;
+  z-index: 3;
+  animation: spin 3s infinite linear;
+  transform-origin: bottom;
 }
 @keyframes spin {
   0% {transform: rotate(0deg);}
