--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html {
   position: relative;
 
   background: transparent url("../images/clock-face.svg") no-repeat center center;
-    z-index: 1;
+  z-index: 1;
 
 }
 
@@ -39,8 +39,15 @@ html {
   animation: spin 3s infinite linear;
   transform-origin: bottom;
 }
+
 @keyframes spin {
-  0% {transform: rotate(0deg);}
-  100% {transform: rotate(360deg);}
+
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 
 }
